@@ -6,6 +6,7 @@ job specification
 reserveChangedState = False
 
 import re
+import datetime
 
 
 class JobSpec(object):
@@ -83,6 +84,9 @@ class JobSpec(object):
         oldVal = getattr(self,name)
         object.__setattr__(self,name,value)
         newVal = getattr(self,name)
+        if name == 'jobStatus':
+            if oldVal != newVal:
+                self.stateChangeTime = datetime.datetime.utcnow()
         # collect changed attributes
         if oldVal != newVal and not name in self._suppAttrs:
             self._changedAttrs[name] = value
