@@ -1,5 +1,8 @@
 Release Notes
 
+* 12/2/2016
+  * changed to update stateChangeTime properly
+
 * 12/1/2016
   * removed retry for analysis in Watcher
 
